# intention_recognition_ros

./: CMakeLists.txt  README.md  package.xml
action/: PlanAndExecute.action
launch/: insect_hotel.launch
msg/: IntentionObs.msg
nodes/: activity_recognition_node
params/: HotelA.json  hotel_params.input  insectHotel.prob
src/: IR_ROS_NODE.cpp
src/rageplan/: Parser.h  assembly_robot.cpp  assembly_robot.h  assembly_worker.cpp  assembly_worker.h  beliefstate.cpp  experiment.cpp  ftable.cpp  ftable.h  hotel.prob  hotel_robot.cpp  hotel_robot.h  hotel_worker.cpp  hotel_worker.h  incorap_mini.cpp  incorap_mini.h  incorap_worker.cpp  incorap_worker.h  main.cpp  maintenance_worker.cpp  maintenance_worker.h  mcts.cpp  node.cpp  output  testRun.sh
src/rageplan/ECMR/: expRun.sh  insectHotel1.prob  insectHotel10.prob  insectHotel2.prob  insectHotel3.prob  insectHotel4.prob  insectHotel5.prob  insectHotel6.prob  insectHotel7.prob  insectHotel8.prob  insectHotel9.prob
src/rageplan/ECMR/DATA/: hotel.P.1-16_1.out  hotel.P.1-16_4.out  hotel.P.1-16_6.out  hotel.P.1-16_8.out  hotel.R.1-16_1.out  hotel.R.1-16_4.out  hotel.R.1-16_6.out  hotel.R.1-16_8.out
src/rrlib/: rr_parser.cpp  rr_parser.h  rr_test.cpp  rrlib.cpp  rrlib.h  rrlib_assembly.cpp  rrlib_assembly.h  rrlib_hotel.cpp  rrlib_hotel.h
srv/: Intention.srv
