<?xml version="1.0"?>
<package format="2">
  <name>intention_recognition_ros</name>
  <version>0.0.0</version>
  <description>Intention recognition ros wrapper</description>

  <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>intention_recognition_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rapidjson-dev</build_depend>
  <build_depend>tables_demo_planning</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>intention_recognition_msgs</build_export_depend>
  <build_export_depend>tables_demo_planning</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>intention_recognition_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>rapidjson-dev</exec_depend>
  <exec_depend>tables_demo_planning</exec_depend>

</package>
